--- a/index.html
+++ b/index.html
@@ -21,57 +21,60 @@
 
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="nav.css">
-<link rel="stylesheet" href="responsive">
+
+<link rel="stylesheet" href="form.css">
+
+<link rel="stylesheet" href="responsive.css">
 </head>
 <body>
             <!-- ############################### Nav Bar  
 ############################# -->
-      <nav >
-    <div class="main__nav ">
-      <!-- Logo  -->
-    <div>  
-      <a class="nav__logo"><h3>Ediee</h3></a>
-    </div>
-     <!-- Menu  -->
-   <div>
-    <ul id="nav__items" >
-      <li><a  href="#">Home</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Our Work</a></li>
-      <li><a href="#">Clients</a></li>
-      <li><a href="#">Contact</a></li>
-      </ul>
-   </div>
-    <!-- Hamburger button  -->
-  <button id="open__nav-btn" title="open"><i class="fa fa-bars" aria-hidden="true"></i></i></button>
-  <button id="close__nav-btn" title="close"><i class="fa fa-window-close" aria-hidden="true"></i></i></button>  
+<nav >
+<div class="main__nav ">
+<div>  
+<a class="nav__logo"><h3>Webex</h3></a>
+</div>
+<!-- Menu  -->
+<div>
+<ul id="nav__items" >
+<li><a  href="#">Home</a></li>
+<li><a href="#">Services</a></li>
+<li><a href="#">Our Work</a></li>
+<li><a href="#">Clients</a></li>
+<li><a href="#">Contact</a></li>
+</ul>
+</div>
+<!-- Hamburger button  -->
+<button id="open__nav-btn" title="open"><i class="fa fa-bars" aria-hidden="true"></i></i></button>
+<button id="close__nav-btn" title="close"><i class="fa fa-window-close" aria-hidden="true"></i></i></button>  
 </div>
 </nav>
      <!-- ############################### Hero CSS
 ############################# -->
 
 <section>
-  <!-- hero-text  -->
-<div class="hero__container">
-   <p class="lead">Unhappy with your website? </p>
-   <h2> We create beautiful and fast web services</h2>
+<!-- hero-text  -->
+<div class="container hero__container">
+<p class="lead">Unhappy with your website? </p>
+<h2> We create beautiful and fast web services</h2>
 </div>
 <!-- hero-img  -->
-<div class="hero__image__container">
+<div class=" container hero__image__container">
 <img src="./image/heroImage.jpg" alt="">
 </div>
 <!-- hero-text  -->
-<div class="hero__container">
-  <h2> Story, emotion and purpose </h2>
-  <p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time. </p>
-  <p class="small">Want us to contact you?</p>
-<!-- form  -->
-<form action="#">
-<div class="form__div">
-<input type="email" placeholder="email" />
-<a href="#" class="btn">Join</a>
-</div>
+<div class="container hero__container">
+<h2> Story, emotion and purpose </h2>
+<p>We help transform your ideas into real world applications that will outperform your toughest competition and help you achieve your strategic goals in short period of time. </p>
+<p class="small">Want us to contact you?</p>
+
+
+<form>
+
+  <input type="email" id="email" name="email" placeholder=" email " required>
+  <input type="submit" value="Submit">
 </form>
+
 <!-- end form  -->
 </div>
 </section>
@@ -83,46 +86,83 @@
 
 
 <section>
-  <div class="service__contianer">
-    <div class="service__head">
-     <p>We offer high demand services</p>
-   </div>
- <div class="service__bottom">
-  <div class="service__box">
-    <i class="fa fa-pencil" aria-hidden="true"></i>
-    <h5>UI/UX Design</h5>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam sed magni quibusdam amet</p>
-    <div class="service__button">
-      <a href="#" class="btn-primary">Get started</a>
-     </div>
-   </div>
-   <!-- 2  -->
-   <div class="service__box">
-    <i class="fa fa-arrows" aria-hidden="true"></i>
-    <h5>Frontend</h5>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam sed magni quibusdam amet</p>
-    <div class="service__button">
-      <a href="#" class="btn-primary">Get started</a>
-     </div>
-   </div>
-   <!-- 3  -->
-   <div class="service__box">
-    <i class="fa fa-pencil" aria-hidden="true"></i>
-    <h5>Backend</h5>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam sed magni quibusdam amet!</p>
-   <div class="service__button">
-    <a href="#" class="btn-primary">Get started</a>
-   </div>
-   </div>
- </div>
-  </div>
+<div class=" container service__contianer">
+<div class="service__head">
+<p>We offer high demand services</p>
+</div>
+<div class="service__bottom">
+  <!-- 1  -->
+<div class="service__box">
+<i class="fa fa-pencil" aria-hidden="true"></i>
+<h5>UI/UX Design</h5>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam sed magni quibusdam amet</p>
+<div class="service__button">
+<a href="#" class="btn-primary">Get started</a>
+</div>
+</div>
+<!-- 2  -->
+<div class="service__box">
+<i class="fa fa-arrows" aria-hidden="true"></i>
+<h5>Frontend</h5>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam sed magni quibusdam amet</p>
+<div class="service__button">
+<a href="#" class="btn-primary">Get started</a>
+</div>
+</div>
+<!-- 3  -->
+<div class="service__box">
+<i class="fa fa-pencil" aria-hidden="true"></i>
+<h5>Backend</h5>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi nam sed magni quibusdam amet!</p>
+<div class="service__button">
+<a href="#" class="btn-primary">Get started</a>
+</div>
+</div>
+</div>
+</div>
 </section>
 
+<!-- Our work  -->
+<section>
+<div class=" container work__container">
+<div class="work__head">
+<p>Good design means good business </p>
+</div>
 
+<div class="showcase">
+<div class="showcase__box">
+<img src="./image/smarthome.jpg" alt="smarthome">
+<div class="showcase__details">
+<p>Full stack application</p>
+<h6>Smart home dasboard</h6>
+</div>
+</div>
+<div class="showcase__box">
+<img src="./image/onboard.png" alt="Onboard">
+<div class="showcase__details">
+  <p>UI/UX Design</p>
+  <h6> Onboard application</h6>
+</div>
+</div>
 
+<div class="showcase__box">
+<img src="./image/booking.png" alt="Booking">
+<div class="showcase__details">
+<p>Mobile application</p>
+<h6>Booking system </h6>
+</div>
+</div>
 
-
-
+<div class="showcase__box">
+<img src="./image/juice-product.png" alt="juice-product">
+<div class="showcase__details">
+  <p>Front End applicati on</p>
+  <h6>Juice product homepage </h6>
+</div>
+</div>
+</div>
+</div>
+</section>
 
 
 <script src="./main.js"></script>
