--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 <form>
 
-  <input type="email" id="email" name="email" placeholder=" email " required>
-  <input type="submit" value="Submit">
+  <input type="email" id="email" name="email" placeholder="Email " required>
+  <input type="submit" value="Join">
 </form>
 
 <!-- end form  -->
@@ -133,14 +133,14 @@
 <div class="showcase__box">
 <img src="./image/smarthome.jpg" alt="smarthome">
 <div class="showcase__details">
-<p>Full stack application</p>
+<small>Full stack application</small>
 <h6>Smart home dasboard</h6>
 </div>
 </div>
 <div class="showcase__box">
 <img src="./image/onboard.png" alt="Onboard">
 <div class="showcase__details">
-  <p>UI/UX Design</p>
+  <small>UI/UX Design</small>
   <h6> Onboard application</h6>
 </div>
 </div>
@@ -148,7 +148,7 @@
 <div class="showcase__box">
 <img src="./image/booking.png" alt="Booking">
 <div class="showcase__details">
-<p>Mobile application</p>
+<small>Mobile application</small>
 <h6>Booking system </h6>
 </div>
 </div>
@@ -156,14 +156,93 @@
 <div class="showcase__box">
 <img src="./image/juice-product.png" alt="juice-product">
 <div class="showcase__details">
-  <p>Front End applicati on</p>
+  <small>Front End applicati on</small>
   <h6>Juice product homepage </h6>
+  <p><a href="#">see more &#8594</a></p>
 </div>
+
 </div>
 </div>
 </div>
 </section>
 
+<!--######################################### Team  -->
+
+<section>
+  <div class="container team__container">
+    <div class="team__left">
+      <small> Meet the team</small>
+      <h3>We are chilled and a laidback team</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+    </div>
+    <div class="team__right">
+    <img src="./image/person3.png" alt="">
+
+    <div class="dflex">
+    <img src="./image/person1.png" alt="">
+    <img src="./image/person2.png" alt="">
+    </div>
+    </div>
+  </div>   
+
+</section>
+
+
+<!--######################################### Tetstimonials  -->
+
+<section>
+  <div class="container testimonial__container">
+    <h3><q>Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and talented team</q></h3>
+    <div class="clients">
+      <div class="clients__img">
+        <img src="./image/person4.png" alt="">
+      </div>
+      <div class="clients__details">
+        <h6 >Carlos Tran</h6>
+        <small>The Decorate Gatsby</small>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!--########################################## Footer  -->
+<footer>
+  <div class="container footer__container">
+       <div class="div__1">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Our work</a></li>
+        <li><a href="#">Clients</a></li>
+        <li><a href="#">Contact</a></li>
+       </div>
+
+       <div class="div__2">
+    <div>    
+      <p>webex</p>
+    </div>
+        <div class="footer__social">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-youtube" aria-hidden="true"></i>
+
+        </div>
+       </div>
+
+       <div class="div__3">
+        <p>Want us to contact you? </p>
+        <form>
+          <input type="email" id="email" name="email" placeholder=" Email " required>
+          <input type="submit" value="Join">
+        </form>
+       </div>
+       
+  </div>
+
+</footer>
+<div class="container copyright__container">
+  <p>created by <strong>yousufj733</strong> - devChallenges.io </p>
+</div>
 
 <script src="./main.js"></script>
 </body>
